# Lambdata-Functs

./: README.md  setup.cfg  test_lambdata.py  test_lambdata_fixtures.py
lambdata/: __init__.py  code_review.py  example_module.py  helper_functions.py  oop_examples.py
