[metadata]
# replace with your username:
name = afroroboticist-helperfunctions
version = 0.0.1
url = https://github.com/afroroboticist/Lambdata-Functs
author = Afroroboticist
author_email = afroroboticist@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Test Package for various DF functs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
